{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 54,
  "lineage": "bbe595ff-4e37-ff2b-3270-2f681a9930fd",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:il-central-1:543518525624:loadbalancer/app/wikijs-dev-alb/b192ed20b31c1989",
            "arn_suffix": "app/wikijs-dev-alb/b192ed20b31c1989",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wikijs-dev-alb-1763527251.il-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:il-central-1:543518525624:loadbalancer/app/wikijs-dev-alb/b192ed20b31c1989",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wikijs-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de06812b445f1f3f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-022ca519b071a0f52"
              },
              {
                "subnet_id": "subnet-060fbbfcdc501adc9"
              }
            ],
            "subnets": [
              "subnet-022ca519b071a0f52",
              "subnet-060fbbfcdc501adc9"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-alb",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-alb",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            },
            "vpc_id": "vpc-0ce72edf986bed177",
            "xff_header_processing_mode": "append",
            "zone_id": "Z09170902867EHPV2DABU"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.database.aws_db_instance.postgres",
            "module.database.aws_db_subnet_group.main",
            "module.database.aws_secretsmanager_secret.db_password",
            "module.database.aws_secretsmanager_secret_version.db_password",
            "module.database.aws_security_group.rds",
            "module.database.random_id.suffix",
            "module.database.random_password.db_password",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.storage.aws_efs_access_point.main",
            "module.storage.aws_efs_file_system.main",
            "module.storage.aws_efs_mount_target.main",
            "module.storage.aws_security_group.efs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:il-central-1:543518525624:listener/app/wikijs-dev-alb/b192ed20b31c1989/393f0235069ea529",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:il-central-1:543518525624:targetgroup/wikijs-dev-tg/fab31ba07d5ba0ce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:il-central-1:543518525624:listener/app/wikijs-dev-alb/b192ed20b31c1989/393f0235069ea529",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:il-central-1:543518525624:loadbalancer/app/wikijs-dev-alb/b192ed20b31c1989",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "WikiJS",
              "Repository": "wiki-js-infrastructure"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.main",
            "module.compute.aws_lb_target_group.wikijs",
            "module.database.aws_db_instance.postgres",
            "module.database.aws_db_subnet_group.main",
            "module.database.aws_secretsmanager_secret.db_password",
            "module.database.aws_secretsmanager_secret_version.db_password",
            "module.database.aws_security_group.rds",
            "module.database.random_id.suffix",
            "module.database.random_password.db_password",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.storage.aws_efs_access_point.main",
            "module.storage.aws_efs_file_system.main",
            "module.storage.aws_efs_mount_target.main",
            "module.storage.aws_security_group.efs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wikijs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:il-central-1:543518525624:targetgroup/wikijs-dev-tg/fab31ba07d5ba0ce",
            "arn_suffix": "targetgroup/wikijs-dev-tg/fab31ba07d5ba0ce",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:il-central-1:543518525624:targetgroup/wikijs-dev-tg/fab31ba07d5ba0ce",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:il-central-1:543518525624:loadbalancer/app/wikijs-dev-alb/b192ed20b31c1989"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wikijs-dev-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.database.aws_db_instance.postgres",
            "module.database.aws_db_subnet_group.main",
            "module.database.aws_secretsmanager_secret.db_password",
            "module.database.aws_secretsmanager_secret_version.db_password",
            "module.database.aws_security_group.rds",
            "module.database.random_id.suffix",
            "module.database.random_password.db_password",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.storage.aws_efs_access_point.main",
            "module.storage.aws_efs_file_system.main",
            "module.storage.aws_efs_mount_target.main",
            "module.storage.aws_security_group.efs"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:security-group/sg-04a0fd34b0b6bb9f5",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a0fd34b0b6bb9f5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06a08137b6f6d3579"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "wikijs-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "543518525624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-rds-sg",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-rds-sg",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c95c5e2561a37d93",
            "arn": "arn:aws:ec2:il-central-1:543518525624:elastic-ip/eipalloc-0c95c5e2561a37d93",
            "association_id": "eipassoc-00980bd8a995deb98",
            "domain": "vpc",
            "id": "eipalloc-0c95c5e2561a37d93",
            "network_border_group": "il-central-1",
            "network_interface": "eni-080e5c0d8de9b9613",
            "private_dns": "ip-10-0-0-30.il-central-1.compute.internal",
            "private_ip": "10.0.0.30",
            "public_dns": "ec2-51-84-168-12.il-central-1.compute.amazonaws.com",
            "public_ip": "51.84.168.12",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-nat-eip",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-nat-eip",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:internet-gateway/igw-001aa4068abe1a849",
            "id": "igw-001aa4068abe1a849",
            "owner_id": "543518525624",
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-igw",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-igw",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            },
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c95c5e2561a37d93",
            "association_id": "eipassoc-00980bd8a995deb98",
            "connectivity_type": "public",
            "id": "nat-0ab1f248224e9533c",
            "network_interface_id": "eni-080e5c0d8de9b9613",
            "private_ip": "10.0.0.30",
            "public_ip": "51.84.168.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-060fbbfcdc501adc9",
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-nat",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-nat",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:route-table/rtb-0416a3cf4f5d08cf2",
            "id": "rtb-0416a3cf4f5d08cf2",
            "owner_id": "543518525624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ab1f248224e9533c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-private-rt",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-private-rt",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:route-table/rtb-0743c6f42142e1917",
            "id": "rtb-0743c6f42142e1917",
            "owner_id": "543518525624",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001aa4068abe1a849",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-public-rt",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-public-rt",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1ff07dec1e9937f",
            "route_table_id": "rtb-0416a3cf4f5d08cf2",
            "subnet_id": "subnet-00a0044b6842a4839"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075f1ae6024e1bbed",
            "route_table_id": "rtb-0416a3cf4f5d08cf2",
            "subnet_id": "subnet-01e8fb6fe7ee9e60c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd91a9bff46d3cc0",
            "route_table_id": "rtb-0743c6f42142e1917",
            "subnet_id": "subnet-060fbbfcdc501adc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa9d23b56b31c7b8",
            "route_table_id": "rtb-0743c6f42142e1917",
            "subnet_id": "subnet-022ca519b071a0f52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:subnet/subnet-00a0044b6842a4839",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a0044b6842a4839",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "543518525624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-private-1",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-private-1",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:subnet/subnet-01e8fb6fe7ee9e60c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e8fb6fe7ee9e60c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "543518525624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-private-2",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-private-2",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:subnet/subnet-060fbbfcdc501adc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060fbbfcdc501adc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "543518525624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-public-1",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-public-1",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:subnet/subnet-022ca519b071a0f52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1b",
            "availability_zone_id": "ilc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022ca519b071a0f52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "543518525624",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-public-2",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-public-2",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:vpc/vpc-0ce72edf986bed177",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030d24dc15b915516",
            "default_route_table_id": "rtb-00119f833166e87dc",
            "default_security_group_id": "sg-05559221fa81ae65c",
            "dhcp_options_id": "dopt-06528e08e4d32fd67",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce72edf986bed177",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00119f833166e87dc",
            "owner_id": "543518525624",
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-vpc",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-vpc",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:security-group/sg-0de06812b445f1f3f",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de06812b445f1f3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wikijs-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "543518525624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-alb-sg",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-alb-sg",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:security-group/sg-06a08137b6f6d3579",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a08137b6f6d3579",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de06812b445f1f3f"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "wikijs-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "543518525624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-ecs-sg",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-ecs-sg",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:543518525624:security-group/sg-015f2f25d304a56fb",
            "description": "Security group for EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015f2f25d304a56fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from ECS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06a08137b6f6d3579"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "wikijs-dev-efs-sg",
            "name_prefix": "",
            "owner_id": "543518525624",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "wikijs-dev-efs-sg",
              "Project": "wikijs",
              "Region": "il-central-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "wikijs-dev-efs-sg",
              "Project": "wikijs",
              "Region": "il-central-1",
              "Repository": "wiki-js-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce72edf986bed177"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs"
          ]
        }
      ]
    }
  ]
}